src/objects/Promotion_Package__c.object
<CustomObject>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Promotion Package</relationshipLabel>
        <relationshipName>Promotion_Package</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <formula>Promotion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Package</relationshipLabel>
        <relationshipName>Promotion_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package_Name__c</columns>
        <columns>Promotion_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Promotion Pack Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Package</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>